<resources>
    <string name="app_name">后会有期</string>
    <string name="mine_userName">韩梅梅</string>
    <string name="mine_meoney">余额</string>
    <string name="mine_BZmeoney">保证金</string>
    <string name="mine_BBletter">表白信</string>
    <string name="mine_loveeyes">心灵之眼</string>
    <string name="mine_MyTeam">我的组队</string>
    <string name="mine_NoItem">暂无组队信息</string>
    <string name="title_activity_home_bak">HomeActivityBak</string>
    <string name="locatioin">位置</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="sms_code">验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="login4sms">通过短信验证码登录</string>
    <string name="login4password">通过手机号密码登录</string>
    <string name="user_agreement">点击注册表示同意用户协议</string>
    <string name="setName">点击设置昵称</string>
    <string name="setPwd">(6-16位的密码)</string>
    <string name="sex">性别</string>
    <string name="success">成功</string>
    <string name="finish">完成</string>
    <string name="local">本地相册</string>
    <string name="tokenphoto">拍照</string>
    <string name="cancel">取消</string>
    <string name="no_result">暂无结果</string>
    <string name="error_network">网络错误</string>
    <string name="error_key">key不正确</string>
    <string name="error_other">其他错误</string>
    <string name="hint_search_box">请输入地址</string>
    <string name="companyName">杭州逸时网络科技有限公司</string>
    <string name="umeng_sharebutton_custom">好友</string>


    <string name="versionchecklib_confirm">安装</string>
    <string name="versionchecklib_cancel">取消</string>
    <string name="versionchecklib_retry">重试</string>
    <string name="versionchecklib_download_fail_retry">下载失败是否重试？</string>
    <string name="versionchecklib_download_finish">下载完成，点击安装</string>
    <string name="versionchecklib_downloading">正在下载中...</string>
    <string name="versionchecklib_check_new_version">检测到新版本</string>
    <string name="versionchecklib_download_progress">下载进度:%d%%/100%%</string>
    <string name="versionchecklib_download_fail">下载失败，点击重试</string>
    <string name="versionchecklib_progress">%d/100</string>
    <string name="versionchecklib_write_permission_deny">下载安装包需要读写文件权限。</string>
    <string name="versionchecklib_download_apkname">%s.apk</string>
</resources>
