<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >
        <ImageView
            android:id="@+id/mine_userIcon"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
        <Button
            android:id="@+id/mine_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:text="退出登录"
            android:layout_toRightOf="@+id/mine_userIcon"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:visibility="invisible"
            android:id="@+id/mine_userInfo"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/mine_userIcon"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/mine_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_userName"/>
            <ImageView
                android:id="@+id/mine_flower"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:id="@+id/mine_flowerNum"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/mine_setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentRight="true"
            />
        <ImageView
            android:id="@+id/mine_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_launcher"
            android:layout_toLeftOf="@+id/mine_setting"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#F0F0F0"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">
                <ImageView
                    android:id="@+id/mine_moneyIcon"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"/>
                <LinearLayout
                    android:layout_toRightOf="@+id/mine_moneyIcon"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_meoney"/>
                    <TextView
                        android:id="@+id/mine_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="30.00"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp">
                <ImageView
                    android:id="@+id/mine_BZmoneyIcon"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"/>
                <LinearLayout
                    android:layout_toRightOf="@+id/mine_BZmoneyIcon"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_BZmeoney"/>
                    <TextView
                        android:id="@+id/mine_BZmoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="30.00"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="#66CCFF"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="75dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px">
                <ImageView
                    android:id="@+id/mine_letter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"/>
                <LinearLayout
                    android:layout_toRightOf="@+id/mine_letter"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_BBletter"/>
                    <TextView
                        android:id="@+id/mine_letterNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="1"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp">
                <ImageView
                    android:id="@+id/mine_loveeyes"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"/>
                <LinearLayout
                    android:layout_toRightOf="@+id/mine_loveeyes"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mine_loveeyes"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="去开通"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:background="#A9A9A9"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:text="@string/mine_MyTeam"
        />
    <ListView
        android:id="@+id/mine_teamInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/mine_noitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mine_NoItem"/>
</LinearLayout>